# aicli

./: .aicli_history  .env.example  .gitignore  CLAUDE.md  FEATURES.md  README.md  TODO.md  conversation_management.md  conversation_managementtodo.md  debug_config.py  debug_config2.py  example_conversation_usage.py  pyproject.toml  test.py  test_navigation.py
aicli/: __main__.py
aicli/agent/: __init__.py  core.py
aicli/cli/: __init__.py  interface.py  main.py  theme.py
aicli/conversation/: __init__.py  context_window.py  core.py  manager.py  state.py
aicli/llm/: __init__.py  factory.py
aicli/tools/: __init__.py  file_tools.py  git_tools.py  registry.py  shell_tools.py
aicli/utils/: __init__.py  config.py  logger.py
examples/: basic_usage.py
tests/: test_basic.py
